Fix: Global icon not visible when background is white

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -677,6 +677,7 @@
     transform: translate(-50%, -50%);
     text-align: center;
 	font-size: 12px;
+	mix-blend-mode: difference;
 }
 .color-button-wrap.has-global-palette-color .astra-advanced-color-indicate .global-color svg{
     width: 10px;
